# plutocradroid

./: .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  Readme.md  build.rs  debug-deploy.sh  diesel.toml  fix-quantities.pgsql  sync-pluto3.sh
.github/workflows/: rust.yml
migrations/2020-03-18-040450_initial/: down.sql  up.sql
migrations/2020-03-19-220144_voting/: down.sql  up.sql
migrations/2020-04-12-191128_transfer/: down.sql  up.sql
migrations/2020-04-27-080003_balance_history_other_party/: down.sql  up.sql
migrations/2020-08-31-023934_fungible_fabricate/: down.sql  up.sql
migrations/2020-10-19-221749_motion_needs_edit/: down.sql  up.sql
migrations/2020-10-27-034805_fungible_names/: down.sql  up.sql
migrations/2020-11-06-031352_better_balance_history/: down.sql  up.sql
migrations/2020-11-06-203842_fix_transaction_data/: down.sql  up.sql
migrations/2021-10-22-175810_auctions/: down.sql  up.sql
migrations/2021-11-13-224011_ordered_item_types/: down.sql  up.sql
migrations/2021-11-23-062743_max_bid/: down.sql  up.sql
migrations/2022-01-21-234914_uuidify/: up.sql
migrations/2022-06-06-202235_submotions/: down.sql  up.sql
src/: bot.rs  damm.rs  fix_transactions.rs  iron_diesel.rs  is_win.rs  main.rs  models.rs  motion_label.rs  names.rs  raii_transaction.rs  rocket_diesel.rs  schema.rs  static_responders.rs  tasks.rs  transfers.rs  view_schema.rs  web.rs  web2.rs  worker.rs
src/web/: auctions.rs  auth.rs  bank.rs  common_context.rs  csrf.rs  debug_utils.rs  deets.rs  give.rs  misc_error.rs  mod.rs  motions.rs  prelude.rs  referer.rs  secure_headers.rs  shortlink.rs  template.rs
static/: contribute.json  main.css
templates/: bare_page.rs.html  page.rs.html
