[package]
name = "plutocradroid"
version = "1.0.0"
authors = ["Shelvacu <shelvacu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.8"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono", "numeric", "extras"] }
diesel-derive-enum = { version = "1", features = ["postgres"] } 
dotenv = "0.15.0"
lazy_static = "*"
regex = "1"
chrono = "*"
chrono-tz = "*"
bigdecimal = "=0.1.2"
maplit = "1.0.2"
ordinal = "*"
#router = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
rocket = "^0.4"
rocket_oauth2 = "^0.4"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["blocking","rustls-tls-native-roots"] }
rand = "0.8.4"
base64 = "0.13.0"
maud = { version = "0.23.0", features = ["rocket"] }
atoi = "0.4.0"
env_logger = "0.8.4"
time = "0.1.43"
hyper = "0.10.16"
async-trait = "0.1.50"
tokio = "1.0.0"
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af425" }
futures = "0.3.15"

[build-dependencies]
vergen = "5"
sha2 = "0.9.5"
hex = "0.4.3"

[features]
debug = []
