[package]
name = "plutocradroid"
version = "1.5.3"
authors = ["Shelvacu <shelvacu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono", "numeric", "extras"] }
diesel-derive-enum = { version = "1", features = ["postgres"] } 
dotenv = "0.15.0"
lazy_static = "*"
regex = "1"
chrono = "*"
chrono-tz = "*"
bigdecimal = { version = "=0.1.2", features = ["serde"] }
maplit = "1.0.2"
ordinal = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
rocket = "0.4.11"
rocket_oauth2 = "0.4.1"
log = "0.4.14"
rand = "0.8.4"
base64 = "0.13.0"
maud = { version = "0.23.0", features = ["rocket"] }
atoi = "0.4.0"
env_logger = "0.8.4"
time = "0.1.43"
hyper = "0.10.16"
async-trait = "0.1.50"
tokio = "1.0.0"
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af425" }
futures = "0.3.15"
phf = { version = "0.10", features = ["macros"] }

[dependencies.serenity]
version = "0.10.8"
default-features = false
features = ["default_no_backend", "rustls_backend"]

[dependencies.reqwest]
version = "0.11.7"
default-features = false
features = ["blocking", "rustls-tls-webpki-roots"]

[build-dependencies]
vergen = "7"
sha2 = "0.9.5"
hex = "0.4.3"

[patch.crates-io]
traitobject = { git = "https://github.com/reem/rust-traitobject", rev = "b3471a15917b2caf5a8b27debb0b4b390fc6634f" }
#destructure_traitobject = { package = "traitobject" }

[features]
debug = []
